# elcoreclrun

./: Makefile  README.md
src/: CMakeLists.txt  README.rst  cl-double.cc  elcorecl-run.cc  error.h
